--- a/package.json
+++ b/package.json
@@ -3,14 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mui/material": "^5.4.4",
+    "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.0",
+    "cors": "^2.8.5",
+    "date-fns": "^2.28.0",
+    "moment": "^2.29.1",
+    "mongoose": "^6.2.4",
     "react": "^17.0.2",
+    "react-date-picker": "^8.4.0",
+    "react-date-range": "^1.4.0",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
